--- a/isp-client/package.json
+++ b/isp-client/package.json
@@ -8,6 +8,7 @@
     "node-sass": "^4.13.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-redux": "^7.1.3",
     "react-scripts": "3.2.0",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0"
